fixed content on footer, made small adjustments to product cards, added insta picture in contact section of home page, made card flexbox wrap

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,6 +4,7 @@
   width: 200px;
   margin: 20px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 2px;
 }
 
 .card-product > img {
