--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -43,5 +43,7 @@
 // PRODUCTS SECTION
 .products {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
 }
 
